2010-08-25  Xan Lopez  <xlopez@igalia.com>

Reviewed by Kent Tamura.

        Local variables 'k' and 'y' in s2b() in dtoa.cpp are computed but not used
        https://bugs.webkit.org/show_bug.cgi?id=29259

        Remove unused code in dtoa.cpp, spotted by Wan-Teh Chang.

        * wtf/dtoa.cpp:
        (WTF::s2b):

Canonical link: https://commits.webkit.org/56861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66089 268f45cc-cd09-0410-ab3c-d52691b4dbfc